更新履歷樣式

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">網頁備審</a>
@@ -75,6 +76,50 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+    </div>
+    <div class="frame">
+
+      <div class="my-portfolio">
+       <div class="left">
+          <h1>
+            黃暄中
+          </h1>
+          <h4>
+            台中市明德中學-普通科
+          </h4>
+          <hr>
+          <p class="description">
+            我是黃暄中,目前就讀台中市明德高中,我的興趣是打爵士鼓、唱歌、學習程式語言等，高中三年參與近年參與RoboCupJunior 2024 Taiwan Open（世界青少年機器人競賽台灣公開賽）獲佳作，亦曾赴韓參與Award of Excellence South korea open 2023，以及新加坡等公開賽，分別獲得第二名及第一名。
+  
+          </p>
+          <div class="link-container">
+            <a class="button-link" href="./research.html">研究成果和專案實作</a>
+            <a class="button-link" href="./document/drone.pdf">無人機小論文</a>
+            
+          </div>
+          <h4>skills</h4>
+          <h2>專業技能</h2>
+
+          <ul class="skill-list">
+            <li>
+              <div class="circle">
+                <div class="p90"></div>
+                <div class="p180"></div>
+                <div class="p270"></div>
+              </div>
+              <p>前端網頁開發</p>
+            </li>
+            <li>
+              <div class="circle">
+                <div class="p90"></div>
+                <div class="p180"></div>
+                <div class="p270"></div>
+              </div>
+              <p>後端網頁開發</p>
+            </li>
+          </ul>
+       </div>
+      </div>
     </div>
 
 
