--- a/research.html
+++ b/research.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+ 
+
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">網頁備審</a>
@@ -72,12 +74,16 @@
     <h2>部分程式碼：</h2>
     <img src="./image/research/1.png" alt="" style="width: 100% ;">
     <h2 class="h1">學習心得</h2>
-    <p  class="h4 lh-base">這是我第一次使用 Unity 製作遊戲，整體過程既充滿挑戰也充滿學習。Unity 的控制界面很直觀也適合初學者，但在剛開始時，面對複雜的功能與工具，確實讓我感到有些不知所措，讓我花了一點時間摸索，漸漸熟悉了基本功能。 
+    <p class="h4 lh-base">這是我第一次使用 Unity 製作遊戲，整體過程既充滿挑戰也充滿學習。Unity
+      的控制界面很直觀也適合初學者，但在剛開始時，面對複雜的功能與工具，確實讓我感到有些不知所措，讓我花了一點時間摸索，漸漸熟悉了基本功能。
 
-      首先，製作遊戲前需要規劃遊戲的許多細節，例如找到或客製合適的素材，將2D素材匯入後，我迎接了下一個難題，就是當我開始撰寫遊戲物件的程式時。因為Unity 使用 C# 作為主要的程式語言，因此我必須先熟悉C#的基本語法，接著才有辦法控制遊戲物件，再來我上網學習了一些Unity物理引擎的特性及使用方法，透過Unity內建的物理引擎可以讓物件之間的碰撞和互動變的真實、有趣，讓這個賽車遊戲的可玩性大大提升，途中我還遇到了一些問題，例如車子在移動時不流暢，轉彎不符合邏輯等，這就牽涉到如何調校剛體 RigidBody 和碰撞體Collider的參數，才可以讓遊戲更加順暢、自然，給予玩家更好的體驗。 
-      
-      總而言之，這次使用 Unity 製作遊戲的經歷讓我對遊戲開發有了更深的理解。我不僅學會了如何設計場景和角色，還逐漸掌握了撰寫程式腳本和優化物理引擎的方法。雖然過程中充滿了有些顛簸，但最後看到自己的遊戲成果時，讓我內心充盈著滿滿的成就感。 
-      
+      首先，製作遊戲前需要規劃遊戲的許多細節，例如找到或客製合適的素材，將2D素材匯入後，我迎接了下一個難題，就是當我開始撰寫遊戲物件的程式時。因為Unity 使用 C#
+      作為主要的程式語言，因此我必須先熟悉C#的基本語法，接著才有辦法控制遊戲物件，再來我上網學習了一些Unity物理引擎的特性及使用方法，透過Unity內建的物理引擎可以讓物件之間的碰撞和互動變的真實、有趣，讓這個賽車遊戲的可玩性大大提升，途中我還遇到了一些問題，例如車子在移動時不流暢，轉彎不符合邏輯等，這就牽涉到如何調校剛體
+      RigidBody 和碰撞體Collider的參數，才可以讓遊戲更加順暢、自然，給予玩家更好的體驗。
+
+      總而言之，這次使用 Unity
+      製作遊戲的經歷讓我對遊戲開發有了更深的理解。我不僅學會了如何設計場景和角色，還逐漸掌握了撰寫程式腳本和優化物理引擎的方法。雖然過程中充滿了有些顛簸，但最後看到自己的遊戲成果時，讓我內心充盈著滿滿的成就感。
+
       這次的經驗讓我對未來製作更複雜的遊戲充滿信心，也更加期待下次能做出一個更完整的好玩遊戲。 </p>
   </div>
 
